--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /*  Step #1
 Animate the logo with keyframes.  (Here is a keyframes reference.) It should start at a width of 25px and grow to 475px.  It should also start with an opacity of 0 and end with an opacity of 1. The animation should take 5 seconds and only happen when the page is loaded. **You can complete this step later in the process - it won’t affect the larger views.  */
 
-@keyframes logoAnimation {
+@keyframes logoGrow {
     0% {
         width: 25px;
         opacity: 0;
@@ -11,6 +11,10 @@ Animate the logo with keyframes.  (Here is a keyframes reference.) It should sta
         width: 475px;
         opacity: 1;
     }
+}
+
+.logo {
+  animation: logoGrow 5s ease forwards;
 }
 
 /* Step #14
@@ -183,9 +187,7 @@ Edit the css for the gallery class to use flex to match our example. (You may wa
     Without using list-style-type add the thumbs up entity as shown in the cards. This is a challenge problem. You should not give or receive help when completing it.**For some people the thumbs up is not printing as yellow. That is fine.*/
     .card::before {
         content: "👍";
-        /* Thumbs-up icon */
         color: yellow;
-        /* Icon color, though may not print in yellow on all devices */
         margin-right: 5px;
     }
 }
